# YumLife

./: .gitignore  .hgignore  CMakeLists.txt  Info.plist.in  README.md  build-release.sh  icon.rc  mingw-cross-toolchain.cmake  no_copyright.txt
.github/workflows/: windows_linux.yml
.gituhb/workflows/: windows_linux.yml
game/: Font.cpp  game.h  gameGraphics.h
gameSource/: ExistingAccountPage.cpp  ExistingAccountPage.h  LivingLifePage.cpp  LivingLifePage.h  Picker.cpp  RebirthChoicePage.cpp  RebirthChoicePage.h  SettingsPage.cpp  SettingsPage.h  TextField.cpp  TextField.h  TwinPage.cpp  TwinPage.h  animationBank.cpp  emotion.cpp  emotion.h  fitnessScore.cpp  fitnessScore.h  game.cpp  hetuwFont.cpp  hetuwTCPConnection.cpp  hetuwTCPConnection.h  hetuwmod.cpp  hetuwmod.h  makeFileList  minitech.cpp  objectBank.cpp  phex.cpp  phex.h  photos.cpp  photos.h  yumBlob.cpp  yumBlob.h  yumConfig.cpp  yumConfig.h  yumGPS.cpp  yumGPS.h  yumRebirthComponent.cpp  yumRebirthComponent.h  yumStateStore.cpp  (+2 more)
gameSource/languages/: English.txt
graphics/openGL/: ScreenGL.h  ScreenGL_SDL.cpp
jasonbuild/source/: runToBuild
minorGems/game/: Font.cpp  Font.h  game.h  gameGraphics.h
minorGems/graphics/: Image.h
minorGems/graphics/openGL/: ScreenGL_SDL.cpp
minorGems/io/file/: File.h
minorGems/system/: MutexLock.h  Thread.h
minorGems/util/: TranslationManager.cpp  TranslationManager.h
scripts/hetuwScripts/: hetuwPullLatest.sh
yum/: generate-blobs.pl  generate-statues.py
yum/crc-fun/: crc-fun.cpp  crc_fun.php  crc_fun.py
